# automaton

./: CMakeLists.txt  automaton.cpp  automaton.h  interactor.cpp  interactor.h  main.cpp  readme.md
tests/: CMakeLists.txt  CMakeLists.txt.in  main.cpp  test_automaton.cpp
